--- a/public/main.css
+++ b/public/main.css
@@ -17,11 +17,13 @@ html, body {
 
 /* Navbar Styles */
 nav {
+  /* border: 1px solid white; */
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100px;
+  min-height: 100px;
   flex-wrap: wrap;
+  margin-top: 20px;
 }
 
 nav ul {
@@ -40,35 +42,36 @@ nav ul li a:hover {
 }
 
 nav .logo {
-  font-size: 25px;
   margin-left: 30px;
-  text-transform: uppercase;
-  font-weight: bold;
+  display: flex;
+  align-items: center;
 }
 
-nav .logo:hover {
-  border-bottom: 3px solid white;
-}
-
-nav a {
+nav ul li a {
   text-decoration: none;
   color: white;
+}
+
+nav .logo img {
+  height: 70px;
+  width: 70px;
 }
 /* End Navbar Styles */
 
 /* Main Styles */
 main {
+  /* border: 1px solid white; */
   flex: 1;
   display: flex;
 }
 
 main .main-container {
-  margin-top: 15px;
-  margin-bottom: 15px;
   margin-left: 30px;
   margin-right: 30px;
   display: flex;
   flex-direction: column;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
 
 main header {
@@ -78,6 +81,7 @@ main header {
 
 main p {
   font-size: 17px;
+  margin-top: 10px;
 }
 
 main p a {
@@ -91,8 +95,8 @@ main p a:hover {
 
 main .index-container img {
   border-radius: 50%;
-  height: 150px;
-  width: 150px;
+  height: 170px;
+  width: 170px;
 }
 
 main .index-container {
@@ -105,9 +109,18 @@ main .index-container {
   width: 100vh;
 }
 
-main .index-container h1 {
+main .index-container .title, .subtitle {
   text-align: center;
   font-weight: bold;
+  margin-top: 20px;
+}
+
+main .index-container .title {
+  font-size: 40px;
+}
+
+main .index-container .subtitle {
+  font-size: 25px;
 }
 
 main .contact-container {
@@ -153,23 +166,16 @@ main .project-container {
 
 /* Footer Styles */
 footer {
+  /* border: 1px solid white; */
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100px;
+  min-height: 100px;
   font-size: 17px;
+  /* padding-top: 10px; */
 }
 /* End Footer Styles */
 
 /* Mobile Styles */
-@media only screen and (max-width: 600px) {
-  nav {
-    justify-content: center;
-    padding-top: 30px;
-  }
-
-  nav .logo {
-    margin-left: 0px;
-  }
-}
+@media only screen and (max-width: 600px) {}
 /* End Mobile Styles */
