--- a/public/main.css
+++ b/public/main.css
@@ -52,8 +52,8 @@ nav ul li a {
 }
 
 nav .logo img {
-  height: 70px;
-  width: 70px;
+  height: 50px;
+  width: 50px;
 }
 /* End Navbar Styles */
 
@@ -78,6 +78,8 @@ main header {
 
 main p {
   font-size: 17px;
+  margin: 0;
+  margin-top: 20px;
 }
 
 main p a {
