--- a/public/main.css
+++ b/public/main.css
@@ -2,7 +2,7 @@ html, body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Fira Sans', sans-serif;
   color: black;
   background-color: white;
 }
