--- a/public/main.css
+++ b/public/main.css
@@ -122,6 +122,22 @@ main .index-container .subtitle {
   font-size: 25px;
 }
 
+main .index-container .social-icons .fa {
+  margin-top: 20px;
+  padding: 10px;
+  font-size: 40px;
+  text-align: center;
+  text-decoration: none;
+}
+
+main .index-container .social-icons .fa:hover {
+  opacity: 0.7;
+}
+
+.fa {
+  color: black;
+}
+
 main .contact-container {
   margin-top: 15px;
   margin-bottom: 15px;
